--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,13 @@
       <artifactId>spring-boot-devtools</artifactId>
       <scope>runtime</scope>
     </dependency>
+
+      <!-- LogSentinel Client -->
+      <dependency>
+          <groupId>com.logsentinel</groupId>
+          <artifactId>logsentinel-java-client</artifactId>
+          <version>0.0.3</version>
+      </dependency>
   </dependencies>
 
   <build>
