--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -2,6 +2,6 @@
 database=mysql
 spring.datasource.url=jdbc:mysql://localhost/test
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=nevermind1
  # Uncomment this the first time the app runs
 # spring.datasource.initialize=true
